tests/NormalTests/paczka1/small_fuzzy/29067938.err
Error in line 2: 6nkv A425 84,6
Error in line 3: 6nkv S567 85,4
Error in line 10: cnIt S567 59,7
Error in line 7: A425 A105 167,4
Error in line 14: txlQC A105 S0,2
Error in line 8: 6nkv S295 29,6
